Version 0.XXXXX | In the not too distant future | fb39021

    Internal/Behavioral Changes:
     * cflags() and cxxflags() no longer include list of include directories
     * Renamed include_path() => include_dirs() now that it returns all
          required include directories
     * Internal method config('blah') now returns blah's data in the config
          hash
     * Compile using Quartz drawing instead of X11 on Apple OS X

    Notes:
     * When stable, this will be an API-breakin' release

Version 0.06921 | 2009-10-11 05:50:42Z (Sun, 11 Oct 2009) | 335da88

    Internal/Behavioral Changes:
     * Upgrading to r6921
     * include_path() and library_path() methods are (hopefully) less flimsey
     * Slightly better platform handling

Version 0.06916 | 2009-10-11 05:50:42Z (Sun, 11 Oct 2009) | 335da88

    Resolved Issues/Bug Fixes:
     * lib/header checks (should) now work on Unix
     * configure action /should/ work on Solaris

    Internal/Behavioral Changes:
     * Upgrading to r6916
     * We configure fltk before creating Build script in case we run into
          trouble (typically missing libs on *nix) and need to exit(0) so test
          results in NA

    Documentation/Sample Code/Test Suite:
     * Full OO syntax is now used in docs, tests, and examples
     * Trimmed down t/0000_use/0002_exe.t so tests don't fail under tunneled X11

    Notes:
     * I'll get this right eventually... ((sigh))

Version 0.06879 | 2009-10-04 04:46:04Z (Sun, 04 Oct 2009) | b9cf221

    Resolved Issues/Bug Fixes:
     * None yet

    Internal/Behavioral Changes:
     * More spitballing with *nix

    Documentation/Sample Code/Test Suite:
     * capabilities() and config() methods are now documented

    Notes:
     * Upgrading to fltk2 r6858 which comes with a modified license which
         remains "in the spirit of the original FLTK 2 license, but at the
         same time [complies with] Debian license requirements."
