@@ -1,6 +1,8 @@
-Version 0.XXXXX | In the not too distant future | fb39021
+Version 0. | In the not too distant future | 88da95e
 
     Internal/Behavioral Changes:
+     * Alien::FLTK can build both the unstable (2.0.x) and stable (1.3.x)
+          branches of FLTK
      * cflags() and cxxflags() no longer include list of include directories
      * Renamed include_path() => include_dirs() now that it returns all
           required include directories
